finished site modeling and responsivity

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body class="has-navbar-fixed-top">
+    <script defer src="modal.js"></script>
 
     <nav id="navbar" class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
@@ -43,46 +44,41 @@
         </div>
     </nav>
 
-    <div class="flexbox">
-        <a class="image">
+
+    <div class="main">
+        <div class="flexbox">
+
             <div class="img-frame my-5">
-                <img src="/img/background.jpg" />
+                <img src="./img/img1.jpg" />
             </div>
-        </a>
 
-        <div class="img-frame my-5">
-            <img src="/img/img1.jpg" />
+            <div class="img-frame my-5">
+                <img src="./img/img2.jpg" />
+            </div>
+
+            <div class="img-frame my-5">
+                <img src="./img/img3.jpg" />
+            </div>
+
+            <div class="img-frame my-5">
+                <img src="./img/img4.jpg" />
+            </div>
+
+            <div class="img-frame my-5">
+                <img src="./img/img5.jpg" />
+            </div>
+
+            <div class="img-frame my-5">
+                <img src="./img/img6.jpg" />
+            </div>
+
+            <div class="img-frame my-5">
+                <img src="./img/img7.jpg" />
+            </div>
+
         </div>
 
-        <div class="img-frame my-5">
-            <img src="/img/img2.jpg" />
-        </div>
-
-        <div class="img-frame my-5">
-            <img src="/img/img3.jpg" />
-        </div>
-
-        <div class="img-frame my-5">
-            <img src="/img/img4.jpg" />
-        </div>
-
-        <div class="img-frame my-5">
-            <img src="/img/img5.jpg" />
-        </div>
-
-        <div class="img-frame my-5">
-            <img src="/img/img6.jpg" />
-        </div>
-
-        <div class="img-frame my-5">
-            <img src="/img/img7.jpg" />
-        </div>
     </div>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-    <dialog>
-        
-    </dialog>
 </body>
 
 </html>
