--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <nav id="navbar" class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
-            <h1 class="title is-3 my-2 mx-5">Titulo</h1>
+            <h1 class="title is-3 my-2 mx-5">Neeks Maeve</h1>
 
             <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
                 data-target="navbarBasicExample">
@@ -32,13 +32,13 @@
 
         <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar-start">
-                <a class="button is-warning is-outlined is-normal mx-2 my-2 ">Home</a>
-                <a class="button is-warning is-outlined is-normal mx-2 my-2 ">Documentation</a>
+                <a class="button is-warning is-outlined is-normal mx-2 my-2 ">Sobre mim</a>
+                <a class="button is-warning is-outlined is-normal mx-2 my-2 ">Contato</a>
             </div>
 
             <div class="navbar-end">
                 <div class="buttons">
-                    <a class="button is-warning is-outlined is-normal mx-2 my-2">Sign up</a>
+                    <a class="button is-warning is-outlined is-normal mx-2 my-2">Topo</a>
                 </div>
             </div>
         </div>
