--- a/portfolio.html
+++ b/portfolio.html
@@ -1,10 +1,10 @@
 <!-- Code made by EduardoStarZ, check https://github.com/eduardostarz/ -->
 
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en-us" id="html">
 
 <head>
-    <title>Portfolio</title>
+    <title>Neeks Maeve &nbsp;-> Portfolio</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="styles/lightbox.min.css" />
     <link rel="stylesheet" href="/styles/style.css" />
-    <!-- <link rel="icon" type="image/jpg" href="img/icon.png" width="100%" /> -->
+    <link rel="icon" type="image/jpg" href="img/icon.png" width="100%" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
@@ -40,7 +40,7 @@
 
             <div class="navbar-end">
                 <div class="buttons">
-                    <a class="button is-warning is-outlined is-normal mx-2 my-2 " hx-get="/index.html" hx-target="" hx-swap="" >About me</a>
+                    <a class="button is-warning is-outlined is-normal mx-2 my-2 " href="javascript:void(0)" onclick="window.location.replace('./')" >About me</a>
                     <a class="button is-warning is-outlined is-normal mx-2 my-2" id="topo" onclick="scrolltop()">Go to
                         Top</a>
                 </div>
@@ -139,6 +139,12 @@
             <div class="img-frame my-5">
                 <a href="./img/img15.jpg" data-lightbox="models" data-title="Day & night">
                     <img src="./img/img15.jpg" />
+                </a>
+            </div>
+
+            <div class="img-frame my-5">
+                <a href="./img/img16.jpg" data-lightbox="models" data-title="Guto skin">
+                    <img src="./img/img16.jpg" />
                 </a>
             </div>
 
