fixed a bug with one of the images

--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@
             </div>
 
             <div class="img-frame my-5">
-                <a href="./img/img9.jpng" data-lightbox="models" data-title="Khumi's Flag">
+                <a href="./img/img9.png" data-lightbox="models" data-title="Khumi's Flag">
                     <img src="./img/img9.png" />
                 </a>
             </div>
